emptyDirPod.yaml
apiVersion: v1
kind: Pod
metadata:
        name: zeepod
spec:
        containers:
        - name: nginx
          image: nginx
          volumeMounts:
          - name: vol1
            mountPath: /usr/share/nginx/html
        volumes:
                - name: vol1
                  emptyDir: {}
