nfs_pvc_pod.yaml

apiVersion: v1
kind: Pod
metadata:
        name: pvcpod
spec:
        containers:
        - name: nginx
          image: nginx
          volumeMounts:
                  - name: local-storage
                    mountPath: /usr/share/nginx/html
        volumes:
        - name: local-storage
          persistentVolumeClaim:
                  claimName: myclaim
