resource_quotaPod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: resource-defined-pod
spec:
  containers:
  - name: redis
    image: redis
    resources:
      requests:
        memory: "500Mi"
        cpu: "200m"
      limits:
        memory: "1Gi"
        cpu: "500m"
