secret_pod.yaml

#kubectl create secret generic mysecrets --from-literal=username=krish --from-literal=password=redhat --dry-run=client -o yaml




apiVersion: v1
kind: Pod
metadata:
        name: secret-evn-pod
spec:
        containers:
        - name: mycontainer
          image: nginx
