ingress_ns_svc_bind.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressgroup
  namespace: giptech
spec:
  rules:
    - host: giptech.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: giptech-svc
              port:
                number: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingressgroup
  namespace: zeetron
spec:
  rules:
    - host: zeetron.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: grras-svc
              port:
                number: 80
